# test_task_pandas

./: .gitignore  README.md  app.py  parser.py  pyproject.toml  reader.py  schems.py  test.py  tools.py  writer.py
